# remote-control

./: CMakeLists.txt  README.md
src/client/: CMakeLists.txt  Client.cpp  Client.h  Stream.cpp  main.cpp
src/server/: CMakeLists.txt  Server.cpp  Server.h  Stream.h  main.cpp
